Fix footer gap

--- a/src/common/Layout/Footer/Footer.module.scss
+++ b/src/common/Layout/Footer/Footer.module.scss
@@ -1,7 +1,7 @@
 .footer {
   padding: 40px 0 40px 0;
-  height: 210px;
   display: flex;
+  gap: 30px;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
